--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,6 +1,6 @@
 .main {
-  min-height: 100vh;
-  background: url(../public/main_bgc.png) no-repeat center #111111;
+  min-height: 1038px;
+  background: url(../public/main_bgc.png) no-repeat center top;
 }
 
 .header {
@@ -38,7 +38,7 @@
   justify-content: space-between;
 }
 
-.title {
+.main_title {
   width: 961px;
   height: 258px;
   color: #ffffff;
@@ -55,4 +55,142 @@
   justify-content: center;
   align-items: center;
   margin-top: 290px;
+}
+
+.about {
+  padding: 120px 0 95px 0;
+}
+
+.about_title {
+  text-align: center;
+}
+
+.about_description {
+  width: 856px;
+  height: 261px;
+  margin: 60px auto 0;
+  font-weight: 700;
+  font-size: 27px;
+  line-height: 130%;
+  color: #ffffff;
+  text-align: center;
+}
+
+.about_description p {
+  margin-bottom: 12px;
+}
+
+.services {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  width: 1296px;
+  height: 832px;
+  margin: 0 auto 150px;
+  gap: 24px;
+}
+
+.services_item {
+  margin-bottom: 60px;
+}
+
+.item_imageWrapper {
+  position: relative;
+  width: 396px;
+  height: 300px;
+  margin-bottom: 30px;
+}
+
+.item_imageFrame {
+  width: 396px;
+  height: 300px;
+  border: 1px solid #cdaa7d80;
+  position: absolute;
+  left: 20px;
+  top: -20px;
+  z-index: 0;
+}
+
+.item_image {
+  position: absolute;
+  z-index: 1;
+}
+
+.item_title {
+  font-weight: 400;
+  font-size: 30px;
+  color: #ffffff;
+}
+
+.cosmetics {
+  width: 1296px;
+  height: 144px;
+  display: flex;
+  margin: 0 auto 168px;
+  justify-content: space-around;
+}
+
+.cosmetics_item {
+  opacity: 0.5;
+}
+
+.ourWorks {
+  width: 1296px;
+  height: 1525px;
+  margin: 0 auto 100px;
+}
+
+.ourWorks_title {
+  font-weight: 700;
+  font-size: 48px;
+  color: #ffffff;
+  text-align: center;
+  margin-bottom: 80px;
+}
+
+.ourWorks_navigation {
+  font-weight: 400;
+  font-size: 24px;
+  color: #ffffff;
+  display: flex;
+  justify-content: center;
+  gap: 60px;
+  margin-bottom: 60px;
+}
+
+.ourWorks_works {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 24px;
+}
+
+.footer {
+  width: 1296px;
+  margin: 0 auto 30px;
+  padding: 70px 0;
+  display: flex;
+  justify-content: space-between;
+  border-top: 1px solid #ffffff80;
+  border-bottom: 1px solid #ffffff80;
+}
+
+.footer_titles {
+  font-weight: 700;
+  font-size: 24px;
+  color: #ffffff;
+  margin-bottom: 24px;
+}
+.footer_infos {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 50px;
+  color: #ffffff;
+}
+
+.copyright {
+  width: 1296px;
+  height: 55px;
+  margin: 0 auto;
+  color: #ffffff;
+  text-align: center;
+  align-items: center;
 }
