feat: contacts page

--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -8,7 +8,7 @@
   border-bottom: 1px solid #ffffff80;
 }
 
-.footer_titles {
+.footer_title {
   font-weight: 700;
   font-size: 24px;
   color: #ffffff;
