--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -21,11 +21,6 @@
   flex: 2;
 }
 
-.menu {
-  flex: 1;
-  text-align: end;
-}
-
 .leftLinks,
 .rightLinks {
   display: flex;
@@ -40,10 +35,121 @@
 }
 
 .link_hover {
-  color: #CDAA7D;
+  color: #cdaa7d;
 }
 
 .link_active {
-  color: #CDAA7D;
-  outline: #CDAA7D;
+  color: #cdaa7d;
+  outline: #cdaa7d;
+}
+
+.menuButton_container {
+  display: flex;
+  flex: 1;
+  justify-content: end;
+}
+
+.menuButton {
+  position: relative;
+  width: 50px;
+  height: 20px;
+}
+
+.menuButton_topLine {
+  position: absolute;
+  right: 0;
+  width: 40px;
+  transition: cubic-bezier(.94,-0.57,.02,1.52);
+  border-bottom: 1px solid #fff;
+  transition-duration: 1000ms;
+}
+
+.topLine_position2 {
+  position: absolute;
+  right: -30vw;
+  width: 40px;
+  opacity: 0;
+  transition: cubic-bezier(.94,-0.57,.02,1.52);
+  border-bottom: 1px solid #fff;
+  transition-duration: 1000ms;
+  transition-delay: 200ms;
+}
+
+.menuButton_centerLine {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 40px;
+  transition: cubic-bezier(.94,-0.57,.02,1.52);
+  border-bottom: 1px solid #fff;
+  transition-duration: 1000ms;
+  transition-delay: 400ms;
+}
+
+.centerLine_position2 {
+  position: absolute;
+  top: 10px;
+  right: -30vw;
+  width: 40px;
+  opacity: 0;
+  transition: cubic-bezier(.94,-0.57,.02,1.52);
+  border-bottom: 1px solid #fff;
+  transition-duration: 1000ms;
+  transition-delay: 600ms;
+}
+
+.menuButton_bottomLine {
+  position: absolute;
+  top: 20px;
+  right: 0;
+  width: 40px;
+  transition: cubic-bezier(.94,-0.57,.02,1.52);
+  border-bottom: 1px solid #fff;
+  transition-duration: 1000ms;
+  transition-delay: 200ms;
+}
+
+.bottomLine_position2 {
+  position: absolute;
+  top: 20px;
+  right: -30vw;
+  width: 40px;
+  opacity: 0;
+  transition: cubic-bezier(.94,-0.57,.02,1.52);
+  border-bottom: 1px solid #fff;
+  transition-duration: 1000ms;
+  transition-delay: 400ms;
+}
+
+.menuWrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 999;
+}
+
+.showMenu {
+  width: 475px;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: #ffffff80;
+  transition: cubic-bezier(.94,-0.57,.02,1.52);
+  transition-duration: 1000ms;
+  transition-delay: 600ms;
+}
+
+.hideMenu {
+  width: 475px;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  right: -600px;
+  background-color: #ffffff80;
+  opacity: 0;
+  transition: cubic-bezier(.94,-0.57,.02,1.52);
+  transition-duration: 1000ms;
 }
