--- a/app/globals.css
+++ b/app/globals.css
@@ -15,4 +15,28 @@ body {
   overflow-x: hidden;
   background-color: #111111;
   scroll-behavior: smooth;
+  overflow-y: auto
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #888;
+  border: 1px solid #666;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #555;
+  border-radius: 5px;
+  border: 1px solid #444;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+  border: 1px solid #333;
 }
