--- a/app/globals.css
+++ b/app/globals.css
@@ -9,34 +9,38 @@
   margin: 0;
 }
 
+html {
+  overflow-y: scroll;
+}
+
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
   background-color: #111111;
   scroll-behavior: smooth;
-  overflow-y: auto
 }
 
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 7px;
 }
 
-/* Track */
 ::-webkit-scrollbar-track {
   background: #888;
   border: 1px solid #666;
 }
 
-/* Handle */
+::-webkit-scrollbar-track:hover {
+  background: #999;
+  border: 1px solid #777;
+}
+
 ::-webkit-scrollbar-thumb {
   background: #555;
   border-radius: 5px;
   border: 1px solid #444;
 }
 
-/* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #555;
+  background: #444;
   border: 1px solid #333;
 }
