--- a/app/globals.css
+++ b/app/globals.css
@@ -11,13 +11,15 @@
 
 html {
   overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 html,
 body {
-  max-width: 100vw;
+  width: 100vw;
   background-color: #111111;
   scroll-behavior: smooth;
+  color: #fff
 }
 
 ::-webkit-scrollbar {
