--- a/styles/OurWorks.module.css
+++ b/styles/OurWorks.module.css
@@ -1,6 +1,5 @@
 .ourWorks {
   width: 1296px;
-  height: 1525px;
   margin: 0 auto 100px;
 }
 
@@ -20,8 +19,30 @@
   margin-bottom: 60px;
 }
 
+.navigation_item {
+  cursor: pointer;
+}
+
+.navigation_activeItem {
+  color: #cdaa7d;
+  padding-bottom: 3px;
+  border-bottom: 1px solid #cdaa7d;
+}
+
+.navigation_item:hover {
+  color: #cdaa7d;
+  transition-duration: 500ms;
+}
+
 .ourWorks_works {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 24px;
+}
+
+.works_emptyItem {
+  width: 416px;
+  margin: 0 auto;
+  font-weight: 400;
+  font-size: 20px;
 }
