--- a/styles/OurWorks.module.css
+++ b/styles/OurWorks.module.css
@@ -44,8 +44,24 @@
   gap: 24px;
 }
 
+.works_item {
+  animation-name: list;
+  animation-duration: 800ms;
+  animation-fill-mode: forwards;
+}
+
+@keyframes list {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 .works_emptyItem {
   width: 416px;
+  height: 416px;
   margin: 0 auto;
   font-weight: 400;
   font-size: 20px;
