--- a/styles/not-found.module.css
+++ b/styles/not-found.module.css
@@ -6,21 +6,46 @@
   background: url(../public/main_bgc.png) no-repeat center top;
 }
 
-.text {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.mask {
   width: 100%;
   height: 100%;
-  font-weight: 700;
-  font-size: 48px;
-  color: #000;
-  backdrop-filter: invert(100%);
+  backdrop-filter: brightness(30%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
 }
 
-.text p {
-  padding: 0 8px;
-  background-color: #fff;
-  border-radius: 10px;
-  box-shadow: 0 0 24px 5px #fff;
+.code {
+  font-weight: 700;
+  font-size: 72px;
+}
+
+.codeDescription {
+  font-weight: 700;
+  font-size: 40px;
+}
+
+.toHome {
+  font-weight: 300;
+  font-size: 32px;
+}
+
+.line {
+  width: 355px;
+  border-bottom: 1px solid #fff;
+  animation-name: line;
+  animation-duration: 5000ms;
+  animation-fill-mode: forwards;
+  animation-timing-function: ease-in;
+}
+
+@keyframes line {
+  0%{
+    width: 355px;
+  }
+  100% {
+    width: 0px;
+  }
 }
