--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,19 +1,25 @@
-.main {
-  min-width: var(--max-width);
-  max-width: 1920px;
-  height: 1038px;
-  margin: 0 auto;
+.home {
   background: url(../public/main_bgc.png) no-repeat center top;
 }
 
+.wrapper {
+  max-width: var(--max-width);
+  margin: 0 auto;
+}
+
+.main {
+  height: 938px;
+  margin: 0 auto;
+  padding-top: 260px;
+}
+
 .main_title {
-  width: 961px;
   height: 258px;
   font-weight: 700;
   font-size: 72px;
   line-height: 120%;
   text-align: center;
-  margin: 260px auto 0;
+  margin: 0 auto;
 }
 
 .scroll {
@@ -27,12 +33,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: var(--max-width);
   margin: 120px auto 115px;
 }
 
 .about_description {
-  width: 856px;
+  max-width: 856px;
   margin-top: 60px;
   font-weight: 700;
   font-size: 27px;
@@ -45,7 +50,6 @@
 }
 
 .cosmetics {
-  width: 1296px;
   height: 144px;
   display: flex;
   margin: 0 auto 168px;
