--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -1,13 +1,17 @@
 .footer {
-  width: 1296px;
-  margin: 0 auto 30px;
+  margin-bottom: 30px;
   padding: 70px 0;
-  display: flex;
-  justify-content: space-between;
   border-top: 1px solid #ffffff80;
   border-bottom: 1px solid #ffffff80;
 }
 
+.wrapper {
+  max-width: var(--max-width);
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+}
+  
 .footer_title {
   font-weight: 700;
   font-size: 24px;
@@ -25,9 +29,7 @@
 }
 
 .copyright {
-  width: 1296px;
   height: 55px;
-  margin: 0 auto;
   text-align: center;
   align-items: center;
 }
