--- a/styles/Cosmetics.module.css
+++ b/styles/Cosmetics.module.css
@@ -1,8 +1,11 @@
+.cosmetics {
+  padding: 170px 0 168px 0;
+}
+
 .wrapper {
   max-width: var(--max-width);
   margin: 0 auto;
   display: flex;
-  margin: 100px auto 168px;
   justify-content: space-around;
   flex-wrap: wrap;
   gap: 100px;
