--- a/styles/OurWorks.module.css
+++ b/styles/OurWorks.module.css
@@ -1,9 +1,10 @@
 .ourWorks {
-  margin: 0 auto 100px;
+  padding-bottom: 100px;
 }
 
 .wrapper {
   max-width: var(--max-width);
+  margin: 0 auto;
 }
 
 .ourWorks_title {
@@ -17,8 +18,7 @@
   font-weight: 400;
   font-size: 24px;
   display: flex;
-  justify-content: center;
-  gap: 60px;
+  justify-content: space-around;
   margin-bottom: 60px;
 }
 
