--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -1,11 +1,4 @@
 .header {
-  position: fixed;
-  z-index: 999;
-  left: 0;
-  right: 0;
-}
-
-.header {
   height: 100px;
   position: fixed;
   z-index: 999;
@@ -20,6 +13,29 @@
   z-index: 999;
   left: 0;
   right: 0;
+  transition: 300ms ease all;
+}
+
+.headerBackFull {
+  max-width: var(--max-width);
+  margin: 0 auto;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  right: 0;
+  z-index: 998;
+  border-bottom: 1px solid #ffffff80;
+  transition: 300ms ease all;
+}
+
+.headerBackMin {
+  max-width: 100%;
+  margin: 0 auto;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  right: 0;
+  z-index: 998;
   background-color: #111111f3;
   border-bottom: 1px solid #ffffff80;
   transition: 300ms ease all;
@@ -40,21 +56,7 @@
   font-size: 18px;
   font-weight: 600;
   padding: 0 20px;
-  border-bottom: 1px solid #ffffff80;
   transition: 100ms ease all;
-}
-
-.minNavbar {
-  height: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin: 0 auto;
-  font-size: 18px;
-  font-weight: 600;
-  transition: 100ms ease all;
-  padding: 0 20px;
-  box-shadow: 0 0 10 0 #111111;
 }
 
 .instaLink {
