--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -252,6 +252,10 @@
   padding-bottom: 20px;
 }
 
+.popup_nav {
+  display: none;
+}
+
 .block_title {
   font-weight: 700;
   font-size: 24px;
@@ -261,4 +265,27 @@
   font-weight: 400;
   font-size: 18px;
   margin-bottom: 15px;
+}
+
+@media (max-width: 850px) {
+  .leftLinks,
+  .rightLinks {
+    display: none;
+  }
+
+  .popup_content {
+    display: none;
+  }
+
+  .popup_nav {
+    height: calc(100vh - 80px);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 60px;
+  }
+}
+
+@media (max-width: 500px) {
+  
 }
