--- a/styles/Contacts.module.css
+++ b/styles/Contacts.module.css
@@ -5,6 +5,7 @@
 .wrapper {
   max-width: var(--max-width);
   margin: 0 auto;
+  padding: 0 30px;
 }
 
 .map {
@@ -53,4 +54,33 @@
 .info_description a {
   text-decoration: none;
   color: #fff;
+}
+
+@media (max-width: 1000px) {
+  .info {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+  }
+
+  .info_part {
+    justify-content: space-evenly;
+  }
+}
+
+@media (max-width: 500px) {
+  .info {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+  }
+
+  .info_part {
+    flex-direction: column;
+    gap: 30px;
+  }
+
+  .info_item {
+    text-align: center;
+  }
 }
