--- a/app/page.module.css
+++ b/app/page.module.css
@@ -6,3 +6,10 @@
   max-width: var(--max-width);
   margin: 0 auto;
 }
+
+@media (max-width: 500px) {
+  .home {
+    background-size: calc(100vh * 2);
+  }
+  
+}
